--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/ico.png" type="image/png">
     <title>Workshop</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <div class="container" >
+    <header>
+        <h1 class="title">
+           PARTICIPE DO WORKSHOP QUE VAI MUDAR O SEU NEGÓCIO
+        </h1>
+    </header>
+
+    <section>
+        <div class="formContainer">
+        <h2>GARANTA SEU LUGAR NO WORKSHOP DO MAIOR </h2>
+        <p>neste evento, você vai aprender as segredos para ser um empreendedor de sucesso sem 
+            precisar contar com a sorte
+        </p>
+        <form action="">
+            <input type="text" id="name" name="name" placeholder="Nome">
+            <input type="text" id="email" name="email" placeholder="email">
+            <select name="place" id="">
+                <option value="rj"></option>
+                <option value="sp"></option>
+                <option value="mg"></option>
+                <option value="es"></option>
+            </select>
+            <input type="submit">
+        </form>
+    </div>
+    </section>
+</div>
 </body>
 </html>
