--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
     <section>
         <div class="formContainer">
-        <h2>GARANTA SEU LUGAR NO WORKSHOP DO MAIOR </h2>
-        <p>neste evento, você vai aprender as segredos para ser um empreendedor de sucesso sem 
+        <h2 class="mb">GARANTA SEU LUGAR NO WORKSHOP DO MAIOR </h2>
+        <p class="mb"">neste evento, você vai aprender as segredos para ser um empreendedor de sucesso sem 
             precisar contar com a sorte
         </p>
         <form action="">
             <input type="text" id="name" name="name" placeholder="Nome">
             <input type="text" id="email" name="email" placeholder="email">
             <select name="place" id="">
-                <option value="rj"></option>
-                <option value="sp"></option>
-                <option value="mg"></option>
-                <option value="es"></option>
+                <option value="rj">Rio de Janeiro</option>
+                <option value="sp">São Paulo</option>
+                <option value="mg">Minas Gerais</option>
+                <option value="es">Espírito Santo</option>
             </select>
             <input type="submit">
         </form>
