--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
         </form>
     </div>
     </section>
+    <footer>
+        <img class="picture" src="./images/face.jpg" alt="imagem">
+        <div class="description">
+            <h3>O palestrante</h3>
+            <p>
+                Alexandre Souza é conhecido por dar palestras que ajudam pessoas e empresas a dar uma nova guinada nos negócios,
+                prepare-se para sair do evento de forma totalmente diferente.
+            </p>
+            <p>
+                Alexandre Souza é conhecido por dar palestras que ajudam pessoas e empresas a dar uma nova guinada nos negócios,
+                prepare-se para sair do evento de forma totalmente diferente.
+            </p>
+        </div>
+    </footer>
 </div>
 </body>
 </html>
